[package]
name = "reactor-trait"
version = "0.1.1"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description =  "A collection of traits to define a common interface across reactors"
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Keruspe/executor-trait"
homepage = "https://github.com/Keruspe/executor-trait"
documentation = "https://docs.rs/executor-trait"
keywords = ["async", "await", "future", "executor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
async-trait = "^0.1.42"
futures-core = "^0.3"
futures-io = "^0.3"

[workspace]
members = [".", "async-reactor-trait", "tokio-reactor-trait"]
