[package]
name = "reactor-trait"
version = "2.3.0"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description =  "A collection of traits to define a common interface across reactors"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/amqp-rs/reactor-trait"
homepage = "https://github.com/amqp-rs/reactor-trait"
documentation = "https://docs.rs/reactor-trait"
keywords = ["async", "await", "future", "executor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
rust-version = "1.78.0"

[features]
default       = []
async_io_safe = ["dep:async-io"]

[dependencies]
async-trait = "^0.1.42"
futures-core = "^0.3"
futures-io = "^0.3"

[dependencies.async-io]
version  = "^2.0"
optional = true

[workspace]
members = [".", "async-reactor-trait", "tokio-reactor-trait"]

[badges]
maintenance = { status = "actively-developed" }
