[package]
name = "async-reactor-trait"
version = "3.0.0"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description =  "reactor-trait implementation for async-io"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/amqp-rs/reactor-trait"
homepage = "https://github.com/amqp-rs/reactor-trait"
documentation = "https://docs.rs/async-reactor-trait"
keywords = ["async", "await", "future", "reactor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
rust-version = "1.78.0"

[dependencies]
async-io = "^2.0"
async-trait = "^0.1.42"
futures-core = "^0.3"

[dependencies.reactor-trait]
version = "=3.0.0"
features = ["async_io_safe"]
path = ".."

[badges]
maintenance = { status = "actively-developed" }
